fixed horizontal scrolling in nav bar

--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -264,7 +264,7 @@ footer h4 {
     }
 
     .links {
-        width: 100vw;
+        width: 100%;
     }
 
     .footer-row-1 {
